fix input center align

--- a/MetricConversion/styles.css
+++ b/MetricConversion/styles.css
@@ -40,6 +40,7 @@
     margin: 20px;
     padding: 10px;
     height: 70px;
+    text-align: center;
     width: 100px;
     font-size: 50px;
     border-radius: 5px;
